refactor: code 정렬